--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
     <div class="monkey-watching">
         O macaco está olhando
         <br>
-        <small style="opacity: 0.7;">versão 1.0</small>
+        <small style="opacity: 0.7;">versão 2.0</small>
     </div>
 
     <div class="page-container">
@@ -756,7 +756,7 @@
                     <button class="template-btn" onclick="loadTemplate('ranged')">🏹 Ataque Preciso</button>
                     <button class="template-btn" onclick="loadTemplate('spell')">🔥 Magia Arcana</button>
                     <button class="template-btn" onclick="loadTemplate('heal')">✨ Cura Divina</button>
-                    <button class="template-btn" onclick="loadTemplate('clear')">🗑️ Limpar Pergaminho</button>
+                    <button class="template-btn" onclick="loadTemplate('clear')">🗑️ Limpar Cartão</button>
                 </div>
 
                 <div class="card-counter" id="cardCounter">Cards Gerados: 0</div>
@@ -980,7 +980,7 @@
             const templates = {
                 melee: {
                     nome: "Golpe Devastador",
-                    nomeSecundario: "Ataque de Bruxo (Infernal) 1",
+                    nomeSecundario: "Ataque de Barbaro 1",
                     subtitulo: "Um ataque poderoso que pode atordoar o inimigo",
                     tipo: "Marcial - Físico",
                     acao: "Ação Padrão",
@@ -996,7 +996,7 @@
                 },
                 ranged: {
                     nome: "Flecha Precisa",
-                    nomeSecundario: "Ataque de Bruxo (Infernal) 1",
+                    nomeSecundario: "Ataque de Ladino 1",
                     subtitulo: "Mira cuidadosa para um tiro certeiro",
                     tipo: "Marcial - Físico",
                     acao: "Ação Padrão",
@@ -1011,7 +1011,7 @@
                 },
                 spell: {
                     nome: "Bola de Fogo",
-                    nomeSecundario: "Ataque de Bruxo (Infernal) 1",
+                    nomeSecundario: "Ataque de Bruxo 1",
                     subtitulo: "Uma explosão ardente que consome tudo",
                     tipo: "Arcano - Fogo",
                     acao: "Ação Padrão",
@@ -1026,7 +1026,7 @@
                 },
                 heal: {
                     nome: "Palavra Curativa",
-                    nomeSecundario: "Ataque de Bruxo (Infernal) 1",
+                    nomeSecundario: "Ataque de Bardo 1",
                     subtitulo: "Energia divina restaura a vitalidade",
                     tipo: "Divino - Cura",
                     acao: "Ação Mínima",
